# api-rust

./: .env.example  .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: deploy_lambda.yml  test.yml
deploy/aws_sam/: samconfig.toml  template.yaml
deploy/docker/: .dockerignore  Dockerfile
lib/: Cargo.toml
lib/src/: app.rs  error.rs  extractors.rs  init.rs  lib.rs  main.rs
lib/src/api/: models.rs
lib/src/auth/: mod.rs  models.rs  repo.rs  repo_jwt.rs  router.rs  router_axum.rs  service.rs  service_jwt.rs
lib/src/user/: mod.rs  models.rs  repo.rs  repo_in_memory.rs  repo_postgres.rs  service.rs
lib/tests/: add.rs
macros/: Cargo.toml
scripts/: fix.sh  preview_sam.sh  run.sh  test-e2e.sh  test-unit.sh  test.sh
scripts/admin/: deploy_lambda.sh  log_tail_lambda.sh  tmp_docker_build_run.sh
