# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
lambda = ["dep:lambda_http"]

[dependencies]
api-rust-macros = { version = "*", path = "../macros" }
axum = { version = "0.7.9", features = ["macros"] }
lambda_http = { version = "0.13.0", optional = true, features = ["apigw_http"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# https://www.cargo-lambda.info/commands/build.html#build-configuration-in-cargo-s-metadata
# [package.metadata.lambda.build]
