# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
lambda = ["dep:lambda_http"]

[dependencies]
api-rust-macros = { version = "*", path = "../macros" }
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
lambda_http = { version = "0.13.0", optional = true, features = ["apigw_http"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
short-uuid = "0.1.4"
sqlx = { version = "0.8.2", features = ["postgres"] }
thiserror = "2.0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }

# https://www.cargo-lambda.info/commands/build.html#build-configuration-in-cargo-s-metadata
# [package.metadata.lambda.build]
